Closed Bug 1168299 Opened 11 years ago Closed 11 years ago

break out style struct memory usage reporting from pres-shell

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: heycam, Assigned: heycam)

Details

(Whiteboard: [MemShrink:P2])

Attachments

(1 file)

Attached patch patchSplinter Review
Today I wanted to know how much memory was being taken up by style structs. I think it's worth reporting this separately from the blob of "other" arena memory that gets attributed to pres-shell.
Attachment #8610397 - Flags: review?(n.nethercote)
Whiteboard: [MemShrink]
Whiteboard: [MemShrink] → [MemShrink:P2]
Attachment #8610397 - Flags: review?(n.nethercote) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: