Bug 1168299 - Break out style struct memory usage reporting from pres-shell. r=njn